--- a/README.org
+++ b/README.org
@@ -2,4 +2,6 @@
 
 PyTom's old major mode for Ren'Py.
 
-I'm maintaining it because the original upstream developer doesn't use either Emacs or Ren'Py anymore. If you use this and know Elisp better than I do (a very low bar), let me know and this major mode is yours.
+~~I'm maintaining it because the original upstream developer doesn't use either Emacs or Ren'Py anymore. If you use this and know Elisp better than I do (a very low bar), let me know and this major mode is yours.~~
+
+This mode now has a real maintainer! Head to https://github.com/Reagankm/renpy-mode for all future updates. Have fun and enjoy all that Ren'Py has to offer!
