Update readme with instructions and history

--- a/README.org
+++ b/README.org
@@ -1,5 +1,17 @@
 #+TITLE: Ren'Py mode
 
-PyTom's old major mode for Ren'Py.
+PyTom's old major mode for Ren'Py, previously maintained by treymerkley, now maintained by me.
 
-This mode now has a real maintainer! Head to https://github.com/Reagankm/renpy-mode for all future updates. Have fun and enjoy all that Ren'Py has to offer!
+** Installation
+
+  Either install within Emacs directly from MELPA or:
+  * Download/clone this repo to your desired location.
+  * In Emacs, use the command =M-x package-install-file= and point it to the renpy.el file location
+    * This will install it to your =~/.emacs.d/elpa/= directory (or your custom location if you've manually set a different =package-user-dir= in Emacs)
+  * In your .emacs file, add =(require 'renpy)=
+
+** History
+
+Originally this was PyTom's major mode for Ren'Py but he no longer uses Emacs or Ren'Py anymore. Then maintenance was taken over by Trey Merkley @treymerkley but he was looking for someone else to take it on who was more familiar with Elisp. So now it is maintained by me.
+
+Come at me, parentheses. I dare you.
